--- a/laco_repeticao/tabuada.html
+++ b/laco_repeticao/tabuada.html
@@ -35,14 +35,14 @@
             document.write(y + 'x' + x + '=' + (y * x) + '<br />')
              }
             document.write('<hr />')
-        }
-    //    <button class="btn btn-light" type="submit"><a href="tabuada.html">Voltar</a></button>
+            }
        
      } 
+    // <a href="tabuada.html">Voltar</a>
          //Tabuada divisão
          function dividir(){
        for (var y = 1; y <= 10; y++){
-            
+        Math.round()
            for(var x = 1; x <= 10; x++){
            document.write(y + '/' + x + '=' + (y / x) + '<br />')
            }
