--- a/laco_repeticao/tabuada.html
+++ b/laco_repeticao/tabuada.html
@@ -44,7 +44,7 @@
        for (var y = 1; y <= 10; y++){
         Math.round()
            for(var x = 1; x <= 10; x++){
-           document.write(y + '/' + x + '=' + (y / x) + '<br />')
+           document.write = (y + '/' + x + '=' + (y / x) + '<br />')
            }
             document.write('<hr />')
         }
